--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -2,7 +2,7 @@
    Sample backup rules file; uncomment and customize as necessary.
    See https://developer.android.com/guide/topics/data/autobackup
    for details.
-   Note: This file is ignored for devices older that API 31
+   Note: This file is ignored for devices older that com.covergenius.mca_sdk_android.data.remote.API 31
    See https://developer.android.com/about/versions/12/backup-restore
 -->
 <full-backup-content>
